# loggo2

./: .bumpversion.cfg  .codecov.yml  .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
docs/: about.md  index.md  install.md  setup.md  usage.md
loggo/: __init__.py  _loggo.py  class_decorator.py  config.py  decorator.py  exception.py  loggo.py
loggo/logs/: log.txt
loggo2/: __init__.py  _loggo2.py
tests/: test_basics.py  test_custom_strings.py  test_import.py  test_method_types.py  tests.py
