[tool.poetry]
name = "Loggo2"
description = "A legacy logging service."
version = "10.1.2"
readme = "README.md"
authors = ["Team Python"]

[tool.black]
line-length = 110
target_version = ['py39']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | tester.py        # also separately exclude a file named tester.py in
                     # the root of the project
)
'''
[tool.poetry.dependencies]
python = "~3.9.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
dotenv-linter = "0.3.0"
flake8 = "4.0.1"
flake8-bugbear = "22.4.25"
flake8-builtins = "1.5.3"
flake8-comprehensions = "3.8.0"
flake8-docstrings = "1.6.0"
isort = "5.10.1"
mypy = "0.950.0"
pep8-naming = "0.12.1"
pre-commit-hooks = "4.2.0"
docformatter = "1.5.0"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-randomly = "3.12.0"
